Updated client scripts.